@startuml
title Juoforge - Core Class Diagram / Onboarding Prompt

skinparam classAttributeIconSize 0
skinparam packageStyle rectangle
skinparam shadowing false
skinparam linetype ortho

hide empty methods
hide empty fields

package "Runtime Core" {
  class World
  class RealmStorage
  class EventBus
  class RegionSystem
  class RegionTransitionService
  class UOFileReaderSystem
  class PolicyService
  class ItemUseService
  class SerialGenerator
  class GameLoop
  class RNG
  class JuoforgeConfiguration
}

package "Gameplay Modules" {
  class EconomyModule
  class AIModule
  class UIModule
  class SkillModule
  class ItemModule
  class PlayerModule
  class CombatModule
  class MobileModule
  class InteractionModule
  class RegionModule
}

package "Networking / Session" {
  class PlayerSession
  class Channel
  class Packet
  class PacketHandler
}

World *-- EventBus : system
World *-- RealmStorage : system
World *-- RegionSystem : system
World *-- RegionTransitionService : system
World *-- UOFileReaderSystem : system
World *-- PolicyService : system
World *-- ItemUseService : system
World *-- SerialGenerator : system
World *-- GameLoop : system
World *-- RNG : system
World *-- JuoforgeConfiguration : config

World *-- EconomyModule : module
World *-- AIModule : module
World *-- UIModule : module
World *-- SkillModule : module
World *-- ItemModule : module
World *-- PlayerModule : module
World *-- CombatModule : module
World *-- MobileModule : module
World *-- InteractionModule : module
World *-- RegionModule : module

RegionTransitionService --> RegionSystem : queries
RegionTransitionService --> EventBus : publishes events

RegionModule --> RegionSystem : queries
RegionModule --> EventBus : listens events

PlayerSession --> World : uses
PlayerSession --> JuoforgeConfiguration : uses
PlayerSession --> Channel : owns connection

PacketHandler --> Packet : receives
PacketHandler --> PlayerSession : delegates
PlayerSession --> World : orchestrates actions

note right of World
World is the main application aggregate.
It centralizes:
- shared systems
- module access
- orchestration of gameplay actions
- global runtime dependencies

Use World as the primary entry point
for domain/game operations triggered
by sessions, loops, or services.
end note

note right of RegionSystem
Pure spatial lookup system.

Responsibilities:
- resolve region by location
- resolve region by name
- provide region indexing

No gameplay logic.
end note

note right of RegionTransitionService
Detects region transitions when
mobiles move.

Responsibilities:
- compare previous and new region
- publish region events
- remain gameplay agnostic
end note

note right of RegionModule
Gameplay logic reacting to regions.

Examples:
- dungeon entrances
- safe zones
- guard zones
- region effects
- PvP rules

Listens to region events and
applies gameplay behavior.
end note

note right of PlayerSession
PlayerSession is the connection-scoped
application facade for one client.

Responsibilities:
- receive intents from packet handlers
- validate / normalize client actions
- coordinate session state
- invoke World services/modules
- write responses to Channel
end note

note bottom of PacketHandler
Assumption:
There is one handler per packet type.

Flow:
1. handler receives packet
2. handler parses / validates payload
3. handler calls PlayerSession
4. PlayerSession applies session rules
5. PlayerSession invokes World
6. World delegates to the proper module/system
end note

note bottom of JuoforgeConfiguration
Shared configuration object used by
runtime services, sessions and world setup.
end note

@enduml